# CHANGELOG

## next

* Reduce README content

* Update command descriptions of `archive-timeline` and `archive-likes`.

* Remove `twitter_options` argument from `TWEnv.start`.

* Remove `pry-doc` as a dependency.

* Set the default value for the user-agent header to `twenv.rb vX.X.X`.

* Call `validate_options!` first thing upon running the `write-tweet`
  command.

## v0.9.0

* In the `write-tweet` command, add a `--wakeup=` option that allows
  a delayed tweet to be sent early.

* In the `write-tweet` command, rename the option `--show-schedule`
  to `--show-delayed`.

* Add the `--tweet-file` option to the `write-tweet` command. The
 `--tweet-file` option accepts a file that's run through ERB and
 then posted as the tweets' content.

## v0.8.0

* Remove `twitter-text` gem.

* Remove the `read-links` command.

* In the `delete-my-tweets` command, parse the `--before-date` option as a date
  in iso8601 format.

* In the `write-tweet` command, print an error when `--delay-date` is provided
  but `--delay` is not.

* In the `write-tweet` command, parse `--delay-date` according to iso8601 format.

* Add `Twitter::REST::Client#remove_follower!`.

* Disable shellwords in the `write-tweet` command.

* Show more information about scheduled tweets when using the
  `--show-schedule` option of the `write-tweet` command.

* Add `--before-date=` option to the `delete-my-tweets` command.

* Perform a client-side verification on tweet size before attempting
  to send the tweet to Twitter. Tweets who exceed the maximum length
  can be edited until their size fits within Twitter's size constraint.

* Add `TWEnv::WriteTweet::ScheduledTweet` struct.

* Add `TWENV::Line#info`.

* Add `--delay-date`, `--cancel` options to the `write-tweet` command.

## v0.7.0

* Add the `--show-schedule` option to `write-tweet` command.

* Update the `delete-my-likes` `--no-replies` option to be `--is-not-reply`.

* Add `--is-not-reply` option to `delete-my-tweets`.
