@@ -14,20 +14,9 @@ class TWEnv
   Dir[File.join(__dir__, "twenv", "commands", "*.rb")].each{|file| require_relative file}
 
   def self.start(pry_options = {})
-    glob = File.join __dir__, '..', 'scripts', '*.rb'
-    Dir[glob].each {|path| require_script(path)}
+    init_files.each {|file| require_script(file) }
     ENV.update parse_dot_file(dot_env_path)
-    Pry.start TOPLEVEL_BINDING, {
-      extra_sticky_locals: {
-        client: Twitter::REST::Client.new { |config|
-          config.consumer_key        = ENV['TWENV_CONSUMER_KEY']
-          config.consumer_secret     = ENV['TWENV_CONSUMER_KEY_SECRET']
-          config.access_token        = ENV['TWENV_ACCESS_TOKEN']
-          config.access_token_secret = ENV['TWENV_ACCESS_TOKEN_SECRET']
-          config.user_agent = user_agent
-        }
-      }
-    }.merge!(pry_options)
+    Pry.start(TOPLEVEL_BINDING, default_pry_options.merge!(pry_options))
   end
 
   #
@@ -53,6 +42,36 @@ class TWEnv
   def self.user_agent
     "twenv.rb v#{TWEnv::VERSION}"
   end
+
+  #
+  # @return [Array<String>]
+  #  Returns an array of paths that will be automatically
+  #  loaded when twenv.rb starts.
+  #
+  def self.init_files
+    glob = File.join root_path, 'scripts', '*_*.rb'
+    init_files = Dir[glob].select {|path| File.basename(path).match?(/^\d+_/) }
+    init_files.sort_by! do |path|
+      basename = File.basename(path)
+      basename[/\d+/]
+    end
+  end
+
+  def self.default_pry_options
+    {extra_sticky_locals: {client: new_client}}
+  end
+  private_class_method :default_pry_options
+
+  def self.new_client
+    Twitter::REST::Client.new do |config|
+      config.consumer_key        = ENV['TWENV_CONSUMER_KEY']
+      config.consumer_secret     = ENV['TWENV_CONSUMER_KEY_SECRET']
+      config.access_token        = ENV['TWENV_ACCESS_TOKEN']
+      config.access_token_secret = ENV['TWENV_ACCESS_TOKEN_SECRET']
+      config.user_agent = user_agent
+    end
+  end
+  private_class_method :new_client
 
   def self.parse_dot_file(path)
     return {} unless File.exist? path
